--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -60,3 +60,13 @@ table tr:hover{background:rgba(255,255,255,0.2);}
 .btn:hover{border-color:#559EFE;color:#559EFE;}
 
 .add{font-size:14px;color:#fff;background:#559EFE;padding:6px 1em;}
+
+/*遮罩层*/
+.mask{background:rgba(0,0,0,0.5);width:100%;height:100%;position:fixed;left:0;top:0;}
+.mask-wrap{width:700px;height:auto;position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);background:#fff;border-radius:6px;padding:30px 20px;box-sizing:border-box;}
+.mask-table th,.mask-table td{border:1px solid #DFE4E7;padding:0;height:40px;}
+.mask-table input{border:0;width:100%;height:40px;line-height:40px;}
+.mask-table tr:nth-child(even){background:#fff;}
+
+
+
