--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -65,7 +65,7 @@ table tr:hover{background:rgba(255,255,255,0.2);}
 .mask{background:rgba(0,0,0,0.5);width:100%;height:100%;position:fixed;left:0;top:0;}
 .mask-wrap{width:700px;height:auto;position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);background:#fff;border-radius:6px;padding:30px 20px;box-sizing:border-box;}
 .mask-table th,.mask-table td{border:1px solid #DFE4E7;padding:0;height:40px;}
-.mask-table input{border:0;width:100%;height:40px;line-height:40px;}
+.mask-table input,.mask-table select{border:0;width:100%;height:40px;line-height:40px;}
 .mask-table tr:nth-child(even){background:#fff;}
 
 
