--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -36,7 +36,7 @@ html,body{height:100%;overflow:hidden;font-family:microsoft yahei;}
 .nav{width:150px;height:100%;margin-left:-150px;background:#447DC8;float:left;}
 .nav-item{width:100%;text-align:center;font-size:15px;color:#fff;padding:15px 0;border-bottom:1px solid #4085CC;}
 .nav-item .iconfont{width:40%;font-size:22px;}
-.main{width:100%;height:100%;}
+.main{width:100%;height:100%;overflow:auto;}
 
 .wrapper{padding:60px 20px 40px 20px;width:100%;height:100%;overflow-y:auto;overflow-x:hidden;position:relative;}
 .table-wrap{width:100%;height:100%;overflow:auto;}
@@ -56,9 +56,6 @@ table tr:nth-child(even){background:#F5F7FA;}
 table tr:nth-child(odd){background:#fff;}
 table tr:hover{background:rgba(255,255,255,0.2);}
 
-.btn{display:inline-block;padding:5px;font-size:14px;color:#8c8f8f;border:1px solid #D4D5D5;background:#F3F4F5;margin:0 5px;}
-.btn:hover{border-color:#559EFE;color:#559EFE;}
-
 .add{font-size:14px;color:#fff;background:#559EFE;padding:6px 1em;}
 
 /*遮罩层*/
@@ -67,6 +64,33 @@ table tr:hover{background:rgba(255,255,255,0.2);}
 .mask-table th,.mask-table td{border:1px solid #DFE4E7;padding:0;height:40px;}
 .mask-table input,.mask-table select{border:0;width:100%;height:40px;line-height:40px;}
 .mask-table tr:nth-child(even){background:#fff;}
+/*下拉框*/
+select{display:inline-block;border:1px solid #ccc;padding:8px 1em;margin:10px 5px;}
+/*按钮*/
+.btn{display:inline-block;padding:5px;font-size:14px;color:#8c8f8f;border:1px solid #D4D5D5;background:#F3F4F5;margin:0 5px;}
+.btn:hover{border-color:#559EFE;color:#559EFE;opacity:0.9;filter:alpha(opacity=90);}
+.btn-big{padding:8px 20px;}
+.btn-blue{background:#559EFE;color:#fff;border:0;}
+.btn-blue:hover{color:#fff;}
+.btn:active{opacity:1;filter:alpha(opacity=100);}
+/*统计分析*/
+.tab{background:#f3f3f3;}
+.tab a{font-size:14px;color:#333;display:inline-block;height:40px;line-height:40px;box-sizing:border-box;padding:0 20px;}
+.tab a:hover{color:#447DC8;}
+.tab .router-link-active{color:#447DC8;border-bottom:2px solid #447DC8;}
+.content{padding:20px;box-sizing:border-box;}
+/*瀑布流*/
+.item{position:absolute;left:5px;right:5px;top:5px;bottom:5px;font-size:14px;color:rgb(0,158,107);}
+.item:before{content:attr(index);position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);}
+/*滚动*/
+.slider{background:#ccc;width:560px;height:300px;}
+.slider-txt{display:block;width:100%;background:rgba(0,0,0,0.5);font-size:14px;color:#fff;height:40px;line-height:40px;position:absolute;margin-top:-40px;z-index:5;left:0;bottom:0;}
+.swiper-pagination{top:0px!important;right:0px!important;left:auto!important;bottom:auto!important;text-align:right!important;}
+.swiper-pagination-bullet-active{background:#E6501E!important;}
+.swiper-button-next{background-image:url('../../../static/img/next.png')!important;width:20px!important;height:20px!important;background-size:80% 80%!important;background-color:rgba(0,0,0,0.5);}
+.swiper-button-prev{background-image:url('../../../static/img/prev.png')!important;width:20px!important;height:20px!important;background-size:80% 80%!important;background-color:rgba(0,0,0,0.5);}
+.swiper-button-next:hover{opacity:0.8;}
+.swiper-button-prev:hover{opacity:0.8;}
 
 
 
